--- a/Проекты/Задание 3/Task_3_4_2.html
+++ b/Проекты/Задание 3/Task_3_4_2.html
@@ -10,9 +10,29 @@
     <form>
         <fieldset>
             <legend>Общая информация</legend>
-            <label for="name">Фамилия
-                <input id="name" type="text" name="name" placeholder="Иванов">
-            </label>
+            <div>
+                <label for="surname">Фамилия</label>
+                <input id="surname" type="text" name="surname" placeholder="Иванов">
+            </div>
+            <div>
+                <label for="name">Имя</label>
+                <input id="name" type="text" name="name" placeholder="Иван">
+            </div>
+            <div>
+                <label for="midname">Отчество</label>
+                <input id="midname" type="text" name="midname" placeholder="Иванович">
+            </div>
+            <div>
+                <label for="email">email</label>
+                <input id="email" type="text" name="email" placeholder="mail@mail.ru">
+            </div>
+        </fieldset>
+        <fieldset>
+            <legend>Пол</legend>
+            <div>
+                <input id="sex_m" type="radio" name="sex_choice" value="male">
+                <label for=""
+            </div>
         </fieldset>
     </form>
 </body>
