--- a/Проекты/Задания 4_1/Task_4_1_3.html
+++ b/Проекты/Задания 4_1/Task_4_1_3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 4.1.3</title>
-    <link rel="stylesheet" href="css/4_1_3.css">
+    <link rel="stylesheet" href="css/style_4_1_3.css">
 </head>
 <body>
     <h2 style="font-size: 26px; color: #2196f3; text-transform: uppercase;">Цитаты Шерлока Холмса</h2>
