--- a/4 CSS/ex4_1_11_fonts_2.html
+++ b/4 CSS/ex4_1_11_fonts_2.html
@@ -11,5 +11,7 @@
 <body>
     <p>Привет, мир!</p>
     <p class="italic">Подключение шрифтов через @fontface</p>
+    <br>
+    <p class="roboto">А это шрифт Roboto</p>
 </body>
 </html>
