--- a/4 CSS/ex4_2_1_CSS_properties_text_styles.html
+++ b/4 CSS/ex4_2_1_CSS_properties_text_styles.html
@@ -75,6 +75,22 @@
         и это счастье можно пить!</p>
     <p class="align4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ut euismod elit. Quisque nec ante accumsan, mattis augue vitae, faucibus ipsum. Quisque feugiat in purus ac rutrum. Integer nisi magna, egestas non ultrices id, lacinia sed tortor. Mauris fringilla libero nec viverra scelerisque. Phasellus ipsum quam, aliquet sit amet massa ac, faucibus efficitur ligula. Fusce a libero suscipit quam facilisis rhoncus at vel velit. Quisque tempor dui sed hendrerit cursus. Pellentesque euismod nibh vel arcu tristique dictum. Cras tempus lobortis sollicitudin. In mattis quam et justo interdum hendrerit. Cras nec augue ut ante maximus viverra eu id orci. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent at sodales elit, at convallis eros. Mauris hendrerit mauris in felis ornare facilisis. Maecenas eget ullamcorper nulla.</p>
     
+    <h2>background-color</h2>
+    <p class="b-color1">Когда на улице ненастье, и неохота выходить, то чашка кофе - просто счастье...
+        и это счастье можно пить!</p>
+    <p class="b-color2">Когда на улице ненастье, и неохота выходить, то чашка кофе - просто счастье...
+        и это счастье можно пить!</p>
+    <p class="b-color3">Когда на улице ненастье, и неохота выходить, то чашка кофе - просто счастье...
+        и это счастье можно пить!</p>
     
+    <h2>line-height</h2>
+    <p class="lh1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ut euismod elit. Quisque nec ante accumsan, mattis augue vitae, faucibus ipsum. Quisque feugiat in purus ac rutrum. Integer nisi magna, egestas non ultrices id, lacinia sed tortor. Mauris fringilla libero nec viverra scelerisque. Phasellus ipsum quam, aliquet sit amet massa ac, faucibus efficitur ligula. Fusce a libero suscipit quam facilisis rhoncus at vel velit. Quisque tempor dui sed hendrerit cursus. Pellentesque euismod nibh vel arcu tristique dictum. Cras tempus lobortis sollicitudin. In mattis quam et justo interdum hendrerit. Cras nec augue ut ante maximus viverra eu id orci. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent at sodales elit, at convallis eros. Mauris hendrerit mauris in felis ornare facilisis. Maecenas eget ullamcorper nulla.</p>
+    <p class="lh2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ut euismod elit. Quisque nec ante accumsan, mattis augue vitae, faucibus ipsum. Quisque feugiat in purus ac rutrum. Integer nisi magna, egestas non ultrices id, lacinia sed tortor. Mauris fringilla libero nec viverra scelerisque. Phasellus ipsum quam, aliquet sit amet massa ac, faucibus efficitur ligula. Fusce a libero suscipit quam facilisis rhoncus at vel velit. Quisque tempor dui sed hendrerit cursus. Pellentesque euismod nibh vel arcu tristique dictum. Cras tempus lobortis sollicitudin. In mattis quam et justo interdum hendrerit. Cras nec augue ut ante maximus viverra eu id orci. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent at sodales elit, at convallis eros. Mauris hendrerit mauris in felis ornare facilisis. Maecenas eget ullamcorper nulla.</p>
+    <p class="lh3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ut euismod elit. Quisque nec ante accumsan, mattis augue vitae, faucibus ipsum. Quisque feugiat in purus ac rutrum. Integer nisi magna, egestas non ultrices id, lacinia sed tortor. Mauris fringilla libero nec viverra scelerisque. Phasellus ipsum quam, aliquet sit amet massa ac, faucibus efficitur ligula. Fusce a libero suscipit quam facilisis rhoncus at vel velit. Quisque tempor dui sed hendrerit cursus. Pellentesque euismod nibh vel arcu tristique dictum. Cras tempus lobortis sollicitudin. In mattis quam et justo interdum hendrerit. Cras nec augue ut ante maximus viverra eu id orci. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent at sodales elit, at convallis eros. Mauris hendrerit mauris in felis ornare facilisis. Maecenas eget ullamcorper nulla.</p>
+
+    <h2>word-break</h2>
+    <p class="wb1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ut euismod elit.</p>
+    <p class="wb2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ut euismod elit.</p>
+    <p class="wb3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ut euismod elit.</p>
 </body>
 </html>
