--- a/4 CSS/ex4_2_3_colors.html
+++ b/4 CSS/ex4_2_3_colors.html
@@ -16,5 +16,24 @@
     <p class="color3">Когда на улице ненастье, и неохота выходить, то чашка кофе - просто счастье...
         и это счастье можно пить!</p>
 
+    <h2>background-color</h2>
+    <div class="bkg-color1"></div>
+    <div class="bkg-color2"></div>
+    <div class="bkg-color3"></div>
+
+    <h2>background-image</h2>
+    <div class="bkg-img1"></div>
+    <div class="bkg-img2"></div>
+    <div class="bkg-img3"></div>
+
+    <h2>gradients</h2>
+    <div class="simple-linear"></div>
+    <div class="stacked-linear"></div>
+    <div class="stacked-radial"></div>
+    <div class="conic-gradient"></div>
+    <div class="multi-repeating-linear"></div>
+    <div class="dawn-img"></div>
+    <div class="dawn"></div>
+
 </body>
 </html>
