--- a/Проекты/Задания 4_2/Task_4_2_10.html
+++ b/Проекты/Задания 4_2/Task_4_2_10.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style_4_2_10.css">
     <title>Task 4.2.10</title>
 </head>
 <body>
@@ -27,5 +28,6 @@
             <p class="block-description">Кофейный напиток итальянской кухни на основе эспрессо с добавлением в него подогретого вспененного молока.</p>
         </div>
     </div>
+    <!-- <div class="test"></div> -->
 </body>
 </html>
