--- a/4 CSS/ex4_2_11_units.html
+++ b/4 CSS/ex4_2_11_units.html
@@ -14,7 +14,7 @@
     <p class="percentage_units">Есть вещи, которые стоят того, чтобы им хранили верность. Например, кофе.</p>
     <div><p class="percentage_units">Есть вещи, которые стоят того, чтобы им хранили верность. Например, кофе.</p></div>
     <h2>Свойство box-sizing: border box</h2>
-    <p class="bb">Есть вещи, которые стоят того, чтобы им хранили верность. Например, кофе.</p>
-    <p class="no-bb">Есть вещи, которые стоят того, чтобы им хранили верность. Например, кофе.</p>
+    <p class="bb">box-sizing: border-box; Есть вещи, которые стоят того, чтобы им хранили верность. Например, кофе.</p>
+    <p class="no-bb">box-sizing: content-box; Есть вещи, которые стоят того, чтобы им хранили верность. Например, кофе.</p>
 </body>
 </html>
