--- a/4 CSS/ex4_2_14_grid.html
+++ b/4 CSS/ex4_2_14_grid.html
@@ -8,6 +8,16 @@
     <title>Гайд по grid</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+    </div>
 </body>
 </html>
