--- a/4 CSS/ex4_2_14_grid.html
+++ b/4 CSS/ex4_2_14_grid.html
@@ -18,6 +18,7 @@
         <div class="item item7">7</div>
         <div class="item item8">8</div>
         <div class="item item9">9</div>
+        <div class="item item10">10</div>
     </div>
 </body>
 </html>
