--- a/4 CSS/ex4_2_14_grid.html
+++ b/4 CSS/ex4_2_14_grid.html
@@ -20,5 +20,9 @@
         <div class="item item9">9</div>
         <div class="item item10">10</div>
     </div>
+
+    <div class="link-container">
+        <a href="#" class="link">выбери меня</a>
+    </div>
 </body>
 </html>
