--- a/4 CSS/ex4_3_2_flex_nav.html
+++ b/4 CSS/ex4_3_2_flex_nav.html
@@ -8,8 +8,14 @@
     <title>4.3 FlexBox. Стилизация меню</title>
 </head>
 <body>
-    <div class="container">
-
-    </div>
+    <nav class="nav">
+        <a href="#" class="logo">LOGO</a>
+        <ul class="menu">
+            <li class="menu-li"><a href="#" class="link">Home</a></li> 
+            <li class="menu-li"><a href="#" class="link">Blog</a></li>   
+            <li class="menu-li"><a href="#" class="link">Story</a></li>   
+            <li class="menu-li"><a href="#" class="link">Contact</a></li>   
+        </ul>
+    </nav>
 </body>
 </html>
