--- a/Проекты/ValveAdvisor/VA-main.html
+++ b/Проекты/ValveAdvisor/VA-main.html
@@ -11,20 +11,22 @@
     <div class="container">
         <nav class="nav">
             <div class="logo">
-                <p class="logo-text">Valve<br>Advisor</p>
+                <div class="logo-text">
+                    <p><a href="#" class="link">Valve<br>Advisor</a></p>
+                </div>
             </div>
             <ul class="menu">
-                <li class="menu-li">Главная</li>
-                <li class="menu-li">Загрузка</li>
-                <li class="menu-li">Помощь</li>
+                <li class="menu-li"><a href="#" class="link">Главная</a></li>
+                <li class="menu-li"><a href="#" class="link">Загрузка</a></li>
+                <li class="menu-li"><a href="#" class="link">Помощь</a></li>
             </ul>
         </nav>
         <div class="main-part">
-            <div class="input-data"></div>
-            <div class="results"></div>
-            <div class="service-data"></div>
+            <div class="input-data block">Input Data</div>
+            <div class="results block">Valve Results</div>
+            <div class="service-data block">Service Data</div>
         </div>
-        <div class="footer"></div>
+        <div class="footer">Footer</div>
     </div>
 </body>
 </html>
