--- a/Проекты/Задания 5/Task_5_4.html
+++ b/Проекты/Задания 5/Task_5_4.html
@@ -47,17 +47,17 @@
             <div class="blog__content">
                 <div class="blog__card">
                     <h3 class="card__header">Daily Coffee News</h3>
-                    <img class="card__image"></img>
+                    <img class="card__image img-1"></img>
                     <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean varius eget arcu quis cursus. Nunc id tortor imperdiet, vestibulum orci sed, gravida orci. Cras a enim ac elit eleifend euismod.</p>
                 </div>
                 <div class="blog__card">
                     <h3 class="card__header">Dutch Coffee Chains</h3>
-                    <img class="card__image"></img>
+                    <img class="card__image img-2"></img>
                     <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean varius eget arcu quis cursus. Nunc id tortor imperdiet, vestibulum orci sed, gravida orci. Cras a enim ac elit eleifend euismod.</p>
                 </div>                
                 <div class="blog__card">
                     <h3 class="card__header">Start Up In Minneapolis</h3>
-                    <img class="card__image"></img>
+                    <img class="card__image img-3"></img>
                     <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean varius eget arcu quis cursus. Nunc id tortor imperdiet, vestibulum orci sed, gravida orci. Cras a enim ac elit eleifend euismod.</p>
                 </div>
             </div>
