--- a/Проекты/Задания 5/Task_5_4.html
+++ b/Проекты/Задания 5/Task_5_4.html
@@ -12,10 +12,9 @@
 </head>
 <body>
     <header class="header">
-        <a name="top"></a>
         <nav class="menu">
             <div class="logo">
-                <a class="menu__logo" href="#top">Cofee House</a>
+                <a class="menu__logo" href="#">Cofee House</a>
             </div>
             <ul class="menu__ul">
                 <li class="menu__li"><a class="menu__link" href="#home">Home</a></li>
@@ -46,28 +45,32 @@
             <h2 class="blog__header">Blog</h2>
             <div class="blog__content">
                 <div class="blog__card">
-                    <h3 class="card__header">Daily Coffee News</h3>
+                    <h3 class="card__header"><a href="#">Daily Coffee News</a></h3>
                     <img class="card__image img-1"></img>
                     <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean varius eget arcu quis cursus. Nunc id tortor imperdiet, vestibulum orci sed, gravida orci. Cras a enim ac elit eleifend euismod.</p>
                 </div>
                 <div class="blog__card">
-                    <h3 class="card__header">Dutch Coffee Chains</h3>
+                    <h3 class="card__header"><a href="#">Dutch Coffee Chains</a></h3>
                     <img class="card__image img-2"></img>
                     <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean varius eget arcu quis cursus. Nunc id tortor imperdiet, vestibulum orci sed, gravida orci. Cras a enim ac elit eleifend euismod.</p>
                 </div>                
                 <div class="blog__card">
-                    <h3 class="card__header">Start Up In Minneapolis</h3>
+                    <h3 class="card__header"><a href="#">Start Up In Minneapolis</a></h3>
                     <img class="card__image img-3"></img>
                     <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean varius eget arcu quis cursus. Nunc id tortor imperdiet, vestibulum orci sed, gravida orci. Cras a enim ac elit eleifend euismod.</p>
                 </div>
             </div>
         </div>
+        <a name="subscribe"></a>
         <div class="contact">
-            <a name="subscribe"></a>
-            <p>Contact</p>
+            <h2 class="contact-header">Subscribe</h2>
+            <input class="contact-input" placeholder="enter your email">
+            <button class="contact-button" type="submit">Submit</button>
         </div>
     </main>
-    <footer class="footer">Footer</footer>
+    <footer class="footer">
+        <p class="footer__text">© COPYRIGHT 2023</p>
+    </footer>
     
 </body>
 </html>
