--- a/6_JavaScript/6_3_HTML_DOM/ex_6_3_3_input_events.html
+++ b/6_JavaScript/6_3_HTML_DOM/ex_6_3_3_input_events.html
@@ -9,7 +9,20 @@
 <body>
     <input class="name" type="text">
     <button class="btn">Отправить</button>
-    <p class="result"></p>
+    <p class="result"> </p>
+    <br>
+    <input class="name2" type="text">
+    <button class="btn2">Отправить</button>
+    <p class="result2"> </p>
+    <br>
+    <input class="name3" type="text">
+    <button class="btn3">Отправить</button>
+    <p class="result3"></p>
+    <br>
+    <br>
+    <input type="number" id="firstnumber"> + <input type="number" id="secondnumber">
+    <button id="btn">Вычислить</button>
+    <p>Ответ: <span id="res"></span></p>
     <script src="js/ex_6_3_3.js"></script>
 </body>
 </html>
